tests/invalid/VarDecl_Invalid_3.whiley
function f() -> int:
    int x = 2.0
    return x
